# ARPP

./: Cargo.toml  Makefile  README.md
Mathematica/: graphs.nb
benches/: bench.rs  benchmarks.rs
examples/: random_walk.rs  simulation_and_visualize.rs  visualization.rs
src/: lib.rs  main.rs
src/analysis/: metrics.rs  mod.rs  visualization.rs
src/arpp/: formula.rs  liquidity_pool.rs  mod.rs
src/cli/: commands.rs  mod.rs
src/simulation/: mod.rs  monte_carlo.rs  random_walk.rs  result.rs  strategies.rs
src/utils/: helpers.rs  mod.rs
tests/unit/: mod.rs
