[package]
name = "arpp"
version = "0.1.0"
edition = "2021"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "This crate provides a client for the IG Markets API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/ARPP"
homepage = "https://github.com/joaquinbejar/ARPP"
keywords = ["finance", "ohlc", "tick", "trading"]
categories = ["finance", "data-structures"]
exclude = [
    "/examples",
    "/tests",
    "/target",
    "/.git",
    "/.github",
    "/.idea",
    "/.vscode",
    "Cargo.lock",
    "/**/.DS_Store",
]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "examples/**/*",
    "tests/**/*",
    "Makefile",
    "rust-toolchain.toml",
    "Draws/**/*",
    "Docker/**/*",
]

[dependencies]
tokio-tungstenite = "0.23.1"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "time", "signal"] }
chrono = { version = "0.4.38", features = ["serde"] }
approx = "0.5.1"
uuid = { version = "1.10.0", features = ["serde","v4"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
anyhow = "1.0.87"
rust_decimal = { version = "1.36.0", features = ["maths"] }
rust_decimal_macros = "1.36.0"
libm = "0.2.8"
futures = "0.3.30"
num_cpus = "1.16.0"
rand = "0.8.5"
async-trait = "0.1.82"
criterion = "0.5.1"


[dev-dependencies]
assert-json-diff = "2.0.2"
pretty_assertions = "1.4.0"
mockito = "1.5.0"
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1.0"
once_cell = "1.19.0"
assert_approx_eq = "1.1.0"

[[test]]
name = "tests"
path = "tests/unit/mod.rs"

[lib]
name = "arpp"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false
path = "benches/benchmarks.rs"